bg images update css for iphone test5 on heroku - disabled bg: fixed on mobile screens

--- a/app/assets/stylesheets/components/_parallax.scss
+++ b/app/assets/stylesheets/components/_parallax.scss
@@ -58,12 +58,12 @@
 }
 
 
-// @media (max-width : 768px) {
-//     .parallax01, .parallax02 {
+@media (max-width : 768px) {
+    .parallax01, .parallax02 {
 
-//       background-attachment: scroll;
-//     }
-// }
+      background-attachment: scroll;
+    }
+}
 
 
 
